# NexusHR

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  tests.yml
accounts/: admin.py  context_processors.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
announcements/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
attendance/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
billing/: admin.py  apps.py  entitlements.py  models.py  signals.py  stripe_service.py  urls.py  views.py
docs/: sst-deployment.md
employees/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
expenses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
hrms/: health.py  settings.py  test_utils.py  tests.py  urls.py
hrms/settings/: __init__.py  (+2 more)
infra/: package-lock.json  package.json  sst.config.ts  tsconfig.json
leave/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
marketing/: forms.py  urls.py  views.py
organization/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
payroll/: admin.py  models.py  tests.py  urls.py  views.py
performance/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
recruitment/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
reports/: tests.py  urls.py  views.py
scripts/: docker-entrypoint.sh
templates/: base.html
tenancy/: context_processors.py  middleware.py  mixins.py  scoping.py  utils.py
(+67 files in other folders)
