[project]
name = "nexushr"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["accounts", "announcements", "attendance", "employees", "expenses", "hrms", "leave", "organization", "payroll", "performance", "recruitment", "reports"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
  "accounts", "announcements", "attendance", "employees", "expenses",
  "hrms", "leave", "organization", "payroll", "performance", "recruitment", "reports",
]

[tool.ruff.format]
quote-style = "double"
