[project]
name = "nexushr"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501"]
"*/tests.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = [
    "accounts",
    "announcements",
    "attendance",
    "employees",
    "expenses",
    "hrms",
    "leave",
    "organization",
    "payroll",
    "performance",
    "recruitment",
    "reports",
]
